--- a/index.html
+++ b/index.html
@@ -13,9 +13,72 @@
 			<form action="" class="formulario" name="formulario_registro" method="get">
 				<div>
 					<div class="input-group">
-						<input type="text" id="nombre" name="nombre">
+						<input type="text" id="nombre" name="nombre" value="dd">
 						<label class="label" for="nombre">Nombre:</label>
 					</div>
+
+<div class="input-group">
+	<input type="email" id="email" name="email">
+	<label class="label" for="email">email:</label>
+</div>
+<div class="input-group">
+	<input type="date" id="myel" name="date">
+	<label class="label" for="date">date:</label>
+</div>
+<div class="input-group">
+	<input type="datetime-local" id="datetime-local" name="datetime-local">
+	<label class="label" for="datetime-local">datetime-local:</label>
+</div>
+<div class="input-group">
+	<input type="month" id="month" name="month">
+	<label class="label" for="month">month:</label>
+</div>
+<div class="input-group">
+	<input type="number" id="number" name="number">
+	<label class="label" for="number">number:</label>
+</div>
+<div class="input-group">
+	<input type="search" id="search" name="search">
+	<label class="label" for="search">search:</label>
+</div>
+<div class="input-group">
+	<input type="tel" id="tel" name="tel">
+	<label class="label" for="tel">tel:</label>
+</div>
+<div class="input-group">
+	<input type="time" id="time" name="time">
+	<label class="label" for="time">time:</label>
+</div>
+<div class="input-group">
+	<input type="url" id="url" name="url">
+	<label class="label" for="url">url:</label>
+</div>
+<div class="input-group">
+	<input type="week" id="week" name="week">
+	<label class="label" for="week">week:</label>
+</div>
+<div class="input-group">
+	<input type="color" id="color" name="color">
+	<label class="label" for="color">color:</label>
+</div>
+<div class="input-group">
+	<input type="range" id="range" name="range">
+	<label class="label" for="range">range:</label>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 					<div class="input-group">
 						<input type="email" id="correo" name="correo">
 						<label class="label" for="correo">Correo:</label>
